--- a/ObjectDetection.Blazor/Layout/NavMenu.razor
+++ b/ObjectDetection.Blazor/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="videostream">
+            <NavLink class="nav-link" href="DetectObject">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> videostream
             </NavLink>
         </div>
