--- a/ObjectDetection.Shared/Components/VideoStream.razor
+++ b/ObjectDetection.Shared/Components/VideoStream.razor
@@ -7,17 +7,8 @@
     <script src="_content/ObjectDetection.Shared/js/camera.js"></script>
 </HeadContent>
 
-@if (IsHybrid)
-{
-    <p>Hybrid (MAUI) mode active. Awaiting frames...</p>
-    <img id="processedImage" src="@ProcessedImageBase64" style="max-width: 100%; border:1px solid gray;" />
-}
-else
-{
-    <video id="localVideo" autoplay playsinline muted style="max-width: 100%; border:1px solid gray;"></video>
-    <img id="processedImage" src="@ProcessedImageBase64" style="max-width: 100%; border:1px solid gray;" />
-}
-
+<video id="localVideo" autoplay playsinline muted style="max-width: 100%; border:1px solid gray;"></video>
+<img id="processedImage" src="@ProcessedImageBase64" style="max-width: 100%; border:1px solid gray;" />
 
 @code {
     private HubConnection? _connection;
@@ -33,26 +24,15 @@ else
         IsHybrid = OperatingSystem.IsAndroid() || OperatingSystem.IsIOS() || OperatingSystem.IsMacCatalyst();
 
         _connection = new HubConnectionBuilder()
-            .WithUrl(Navigation.ToAbsoluteUri("https://192.168.1.50:7007/videohub"), options =>
-            {
-                options.HttpMessageHandlerFactory = (message) =>
-                {
-                    if (message is HttpClientHandler clientHandler)
-                    {
-                        // برای محیط توسعه - غیرفعال کردن بررسی گواهی
-                        clientHandler.ServerCertificateCustomValidationCallback +=
-                            (sender, certificate, chain, sslPolicyErrors) => true;
-                    }
-                    return message;
-                };
-            })
+            .WithUrl(Navigation.ToAbsoluteUri("https://192.168.1.50:7007/videohub"))
             .WithAutomaticReconnect()
             .Build();
 
-        _connection.On<string>("ReceiveFrame", async (base64Image) =>
+        _connection.On<string, List<Prediction>>("ReceiveFrame", async (ImageBase64, Predicts) =>
         {
-            ProcessedImageBase64 = base64Image;
-            await JS.InvokeVoidAsync("updateImage", base64Image);
+            await JS.InvokeVoidAsync("updateImage", ImageBase64);
+
+            //ProcessedImageBase64 = "data:image/jpeg;base64," + ImageBase64;
             //StateHasChanged();
         });
 
@@ -61,35 +41,29 @@ else
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if (firstRender && !IsHybrid)
-        {
-            _cameraModule = await JS.InvokeAsync<IJSObjectReference>(
-                "import", "./_content/ObjectDetection.Shared/js/camera.js");
 
-            await _cameraModule.InvokeVoidAsync("startCapture", DotNetObjectReference.Create(this));
-        }
-        else if (IsHybrid)
-        {
-            var photo = await MediaPicker.CapturePhotoAsync();
+        _cameraModule = await JS.InvokeAsync<IJSObjectReference>(
+            "import", "./_content/ObjectDetection.Shared/js/camera.js");
 
-        }
+        await _cameraModule.InvokeVoidAsync("startCapture", DotNetObjectReference.Create(this));
+
     }
 
     [JSInvokable]
     public async Task SendFrameToServer(string base64)
     {
-        if (_connection?.State == HubConnectionState.Connected)
+        if (_connection?.State == HubConnectionState.Connected && !string.IsNullOrWhiteSpace(base64))
         {
             await _connection.InvokeAsync("SendFrame", base64);
         }
     }
 
-    // Hybrid frame sender (from MAUI)
-    public async Task SendHybridFrame(string base64)
+
+    public class Prediction
     {
-        if (_connection?.State == HubConnectionState.Connected)
-        {
-            await _connection.InvokeAsync("SendFrame", base64);
-        }
+        public string Name { get; set; }
+        public string Image { get; set; }
     }
+
+
 }
